# llm_dbml

./: .gitignore  LICENSE  Readme.md  pyproject.toml  setup.py
examples/: basic_example.py
llm_dbml/: __init__.py  compiler.py  migration.py  models.py  parser.py  test_data.py  visualizer.py
tests/: test_basic.py
